--- a/charts/chartapp/templates/chartapp/index.html
+++ b/charts/chartapp/templates/chartapp/index.html
@@ -9,9 +9,37 @@
       google.charts.setOnLoadCallback(drawRegionsMap);
 
       function drawRegionsMap() {
+        
+        var datac =new google.visualization.DataTable();
+        //datac.addColumn('string', 'Country', 'Country');
+        datac.addColumn('string', 'State', 'State');
+        //datac.addColumn('string', 'Reference', 'Reference');
+        datac.addColumn('number', 'id', 'id');
+        /*
+        var rows=[['US-IL', 200],
+                  ['US-IN', 300],
+                  ['US-IA', 20],
+                  ['US-RI', 150]]; 
+        datac.addRows(rows);
+        
+          */  
+          //console.log("{{r}}");   
+        {% for ri in r %}          
+          datac.addRow(["{{ri.state}}",{{ri.idf}}]);
+          console.log("{{ri.state}}");
+        {% endfor %}
+        //console.log(datac);
+        
 
-
-	  
+        /*
+        var datac =new google.visualization.DataTable([
+                  ['State','Foo Factor'],
+                  ['US-IL', 200],
+                  ['US-IN', 300],
+                  ['US-IA', 20],
+                  ['US-RI', 150]
+                ]);
+	      
         var datac =new google.visualization.DataTable([
           ['Country','State','Reference'],
           {%for r in response %}
@@ -19,6 +47,7 @@
           {% endfor %}]
           );
         console.log(datac);
+        */
         
 
         var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
